fix: light and dark mode

--- a/src/pages/cv/_components/columns/side-column/style.scss
+++ b/src/pages/cv/_components/columns/side-column/style.scss
@@ -4,7 +4,7 @@
   .github {
     > svg {
       fill: light-dark(var(--light-border), var(--dark-border));
-      margin-right: 10px;
+      margin-right: 5px;
     }
   }
 
