--- a/src/styles/celestials.scss
+++ b/src/styles/celestials.scss
@@ -1,6 +1,4 @@
-html,
-body,
-.space {
+#space {
   background-color: var(--dark-bckgd) !important;
 }
 
