--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -11,10 +11,6 @@ body {
   @media (prefers-color-scheme: dark) {
     color-scheme: dark;
   }
-
-  .dark {
-    color-scheme: dark;
-  }
 }
 
 :root {
